= Changelog: inanepain/config
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Configuration helpers.
:keywords: inanepain, library, config
:copyright: Unlicense
:homepage: https://git.cathedral.co.za:3000/inanepain/config
:revnumber: 0.3.0
:revdate: 2025-xx-xx
:revremark: -dev
:version-label: Unconfirmed
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:toc: left
:sectanchors:
:idprefix: topic-
:idseparator: -
:pkg-vendor: inanepain
:pkg-name: config
:pkg-id: {pkg-vendor}/{pkg-name}

== History

:leveloffset: +2

= 0.2.0-dev (2025 Aug 07)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Configuration helpers.
:keywords: inanepain, library, config
:copyright: Unlicense
:homepage: https://git.cathedral.co.za:3000/inanepain/config
:revnumber: 0.3.0
:revdate: 2025-xx-xx

* new: `Config` Object to load config directory structure.
* update: `OptionsInterface` used throughout.

:leveloffset!:
:leveloffset: +2

= 0.2.0 (2025 Aug 07)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Configuration helpers.
:keywords: inanepain, library, config
:copyright: Unlicense
:homepage: https://git.cathedral.co.za:3000/inanepain/config
:revnumber: 0.2.0
:revdate: 2025-08-07

* new: `Config` Object to load config directory structure.

:leveloffset!:
:leveloffset: +2

= 0.1.0 (2022 Oct 10)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Configuration helpers.
:keywords: inanepain, library, config
:copyright: Unlicense
:homepage: https://git.cathedral.co.za:3000/inanepain/config
:revnumber: 0.1.0
:revdate: 2022-10-10

* initial

:leveloffset!: