@@ -1,13 +1,0 @@
-# ![icon](./icon.png) inanepain/config
-
-Configuration helpers.
-
-# Install
-
-composer
-
-composer require inanepain/config
-
-# Revision
-
-    version: $Id$ ($Date$)
