@@ -57,8 +57,8 @@
             "rm -f CHANGELOG.adoc",
             "asciidoctor-reducer -o CHANGELOG.adoc doc/changelog/index.adoc",
             "asciidoctor -b docbook CHANGELOG.adoc",
-            "rm -f CHANGELOG.md",
-            "pandoc -f docbook -t markdown_strict CHANGELOG.xml -o CHANGELOG.md",
+            "# rm -f CHANGELOG.md",
+            "# pandoc -f docbook -t markdown_strict CHANGELOG.xml -o CHANGELOG.md",
             "rm -f CHANGELOG.xml"
         ],
         "build-readme": [
@@ -66,8 +66,8 @@
             "rm -f README.adoc",
             "asciidoctor-reducer -o README.adoc doc/readme/index.adoc",
             "asciidoctor -b docbook README.adoc",
-            "rm -f README.md",
-            "pandoc -f docbook -t markdown_strict README.xml -o README.md",
+            "# rm -f README.md",
+            "# pandoc -f docbook -t markdown_strict README.xml -o README.md",
             "rm -f README.xml"
         ]
     }
