@@ -1,15 +1,0 @@
-# History
-
-## 0.2.0-dev (2025 Aug 07)
-
-- new: `Config` Object to load config directory structure.
-
-- update: `OptionsInterface` used throughout.
-
-## 0.2.0 (2025 Aug 07)
-
-- new: `Config` Object to load config directory structure.
-
-## 0.1.0 (2022 Oct 10)
-
-- initial
